<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alt_detail_thumbnail">Thumbnail</string>

    <string name="alt_bean_info_icon">Bean information</string>
    <string name="alt_espresso_machine_icon">Espresso machine</string>
    <string name="alt_grinder_machine_icon">Grinder</string>
    <string name="alt_syphon_icon">Syphon</string>
    <string name="alt_aeropress_icon">Aeropress</string>
    <string name="alt_full_immersive_icon">Full immersive</string>
    <string name="alt_cold_brew_icon">Cold brew</string>
    <string name="alt_pour_over_icon">Pour over</string>
    <string name="alt_espresso_icon">Espresso</string>
    <string name="alt_item_cafe_thumbnail">Thumbnail</string>
    <string name="alt_item_cafe_espresso_icon">Espresso</string>
    <string name="alt_item_cafe_pour_over_icon">Pour over</string>
    <string name="alt_item_cafe_cold_brew_icon">Cold brew</string>
    <string name="alt_item_cafe_immersive_icon">Immersive</string>
    <string name="alt_item_cafe_aeropress_icon">Aeropress</string>
    <string name="alt_item_cafe_syphon_icon">Syphon</string>

    <string name="instagram_button_label">Instagram</string>
    <string name="website_button_label">Website</string>
    <string name="facebook_button_label">Facebook</string>

    <string name="details_brew_method_headline">Available brewing methods:</string>
    <string name="content_description_details_fab">View on maps</string>
    <string name="error_retry_button_label">Retry</string>
</resources>