<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".DetailsFragmentBinding">

        <variable
            name="viewModel"
            type="com.thirdwavelist.coficiando.details.presentation.DetailsFragmentViewModel"
            />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/sucess_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:fitsSystemWindows="true"
                app:collapsedTitleGravity="start"
                app:collapsedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:expandedTitleMarginEnd="16dp"
                app:expandedTitleMarginStart="32dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snapMargins"
                app:maxLines="2"
                >

                <ImageView
                    android:transitionName="detailsThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:image="@{viewModel.thumbnail}"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/alt_detail_thumbnail"
                    android:fitsSystemWindows="true"
                    android:foreground="@drawable/scrim"
                    android:inAnimation="@anim/fade_in"
                    android:outAnimation="@anim/fade_out"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                    tools:background="@tools:sample/backgrounds/scenic"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"
                    style="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:title="@{viewModel.name}"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:fadeAnimationDuration="@{350L}"
            app:isVisible="@{viewModel.isFinishedLoading}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:layout_marginTop="250dp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="24dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/grinderIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/alt_grinder_machine_icon"
                        app:srcCompat="@drawable/ic_grinder_machine"
                        />

                    <TextView
                        android:id="@+id/grinderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:text="@{viewModel.grinderMachineName}"
                        tools:text="Grinder"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="24dp"
                    >

                    <ImageView
                        android:id="@+id/espressoIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:contentDescription="@string/alt_espresso_machine_icon"
                        app:srcCompat="@drawable/ic_espresso_machine"
                        />

                    <TextView
                        android:id="@+id/espressoText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:ellipsize="end"
                        android:text="@{viewModel.espressoMachineName}"
                        tools:text="Espresso machine"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/separator1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"
                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="16dp"
                    >

                    <ImageView
                        android:id="@+id/beanIcon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/alt_bean_info_icon"
                        app:srcCompat="@drawable/ic_beans"
                        />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/originText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:gravity="start"
                            android:lines="1"
                            app:htmlText="@{viewModel.availableBeanOrigin}"
                            tools:text="Origin: Single, Blend"
                            />

                        <TextView
                            android:id="@+id/roastTypeText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:lines="1"
                            app:htmlText="@{viewModel.availableBeanRoast}"
                            tools:text="Roast: Light, Medium, Dark"
                            />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/separator2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"
                    />

                <TextView
                    android:id="@+id/brewMethodsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/details_brew_method_headline"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:id="@+id/has_espresso"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_espresso"
                        android:contentDescription="@string/alt_espresso_icon"
                        app:isVisible="@{viewModel.hasEspresso}"
                        />

                    <ImageView
                        android:id="@+id/has_pour_over"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_pourover"
                        android:contentDescription="@string/alt_pour_over_icon"
                        app:isVisible="@{viewModel.hasPourOver}"
                        />

                    <ImageView
                        android:id="@+id/has_cold_brew"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_coldbrew"
                        android:contentDescription="@string/alt_cold_brew_icon"
                        app:isVisible="@{viewModel.hasColdBrew}"
                        />

                    <ImageView
                        android:id="@+id/has_immersive"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_immersive"
                        android:contentDescription="@string/alt_full_immersive_icon"
                        app:isVisible="@{viewModel.hasImmersive}"
                        />

                    <ImageView
                        android:id="@+id/has_aeropress"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_aeropress"
                        android:contentDescription="@string/alt_aeropress_icon"
                        app:isVisible="@{viewModel.hasAeropress}"
                        />

                    <ImageView
                        android:id="@+id/has_syphon"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_syphon"
                        android:contentDescription="@string/alt_syphon_icon"
                        app:isVisible="@{viewModel.hasSyphon}"
                        />

                </LinearLayout>

                <Button
                    android:id="@+id/facebookLink"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:onClick="@{viewModel::navigateToFacebook}"
                    android:text="@string/facebook_button_label"
                    android:textColor="@color/secondaryTextColor"
                    app:isVisible="@{viewModel.hasFacebook}"
                    tools:background="@color/primaryColor"
                    tools:textSize="16sp"
                    />

                <Button
                    android:id="@+id/instagramLink"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:onClick="@{viewModel::navigateToInstagram}"
                    android:text="@string/instagram_button_label"
                    android:textColor="@color/secondaryTextColor"
                    app:isVisible="@{viewModel.hasInstagram}"
                    tools:background="@color/primaryColor"
                    tools:textSize="16sp"
                    />

                <Button
                    android:id="@+id/websiteLink"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:onClick="@{viewModel::navigateToWebsite}"
                    android:text="@string/website_button_label"
                    android:textColor="@color/secondaryTextColor"
                    app:isVisible="@{viewModel.hasWebsite}"
                    tools:background="@color/primaryColor"
                    tools:textSize="16sp"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            style="@style/FabStyle"
            android:onClick="@{(v) -> viewModel.mapAction(v)}"
            app:layout_anchor="@id/app_bar_layout"
            android:contentDescription="@string/content_description_details_fab"
            app:backgroundTint="@color/primaryColor"
            app:isVisible="@{viewModel.isFinishedLoading}"
            app:layout_anchorGravity="bottom|right|end"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
